master

* Adapters::Memcached: switched to Dalli by default
* Adapters::Daybreak: add option :sync to load and store
* Adapters::LRUHash: add option :max_count
* Transformer: add inspect key transformer
* Added #create method to atomically create entries
* Added WeakCreate and WeakIncrement proxies
* Added Mutex and Semaphore synchronization primitives for
  shared/distributed database locks
* Rename unix socket options from :file to :socket

0.7.6

* Adapters::Daybreak: api changed
* Adapters::File: flock fix for jruby
* Transformer: add to_s key transformer

0.7.5

* OptionsSupport#with: Add support to insert additional proxies
* Builder#adapter: Accepts Moneta store instance now

0.7.4

* Transformer: fix truncate
* Adapters::RestClient: raise error if store fails
* Adapters::TDB added
* Adapters::Daybreak added
* Adapters::Mongo - Expiration and increment support added
* Pool proxy added
* Mixin ExpiresSupport added
  * Expiration value handling unified
  * 0 and false are interpreted as persist value
* Adapters::RestClient uses net/http now

0.7.3

* Added Adapters::RestClient
* Added Rack::MonetaRest
* Added Rack::MonetaStore

0.7.2

* Renamed WithOptions to OptionSupport
* Refactored Base in Defaults mixin
* Removed Transformer option :quiet
* Transformer might raise an exception if an invalid value is transformed
* Expires middleware only wraps Arrays and nils in an Array if
  no expiration time is given (backward compatible change)
* Moneta middlewares are not allowed to modify option hash given to functions
  like #load and #store

0.7.1

* Memcached: Use binary protocol and no base64 encoding of the keys
* Transformer: Remove newlines from base64 encodes values
* Server: Add method #run which will block and #running? to allow forking
* SDBM: #store might raise errors (Don't use SDBM, it is unstable!)
* Add #decrement method
* Fix #fetch to handle false correctly
* Fix Expires middleware to handle boolean and nil values correctly