@@ -3,6 +3,7 @@ master
 * Adapters::Memcached: switched to Dalli by default
 * Adapters::Daybreak: add option :sync to load and store
 * Adapters::LRUHash: add option :max_count
+* Adapters::Mongo: add options :user and :password
 * Transformer: add inspect key transformer
 * Added #create method to atomically create entries
 * Added WeakCreate and WeakIncrement proxies
